--- a/_data/index/skills.yml
+++ b/_data/index/skills.yml
@@ -2,5 +2,5 @@
 
 label: Ability
 id : cs
-aspects: C/C++, Python, Linux, Git, OpenCV, OpenGL, Caffe, Boost, English, Unity3D, C#, MATLAB
-percentage: 85, 65, 60, 80, 95, 90, 90, 90, 95, 80, 95, 70
+aspects: C/C++, Python, Linux, Git, C#, OpenGL, Caffe, Boost, English, Unity3D, OpenCV, MATLAB
+percentage: 85, 65, 60, 80, 95, 90, 90, 90, 95, 80, 90, 70
