--- a/_data/index/projects.yml
+++ b/_data/index/projects.yml
@@ -1,35 +1,49 @@
 # projects section data
 # If you don't have language feature(language.yml is empty), ignore "i18n" items
 # Suggest projects' img be located at '/static/assets/img/landing', and edit following img items.
-#- name: ActiveAssemblyGuidance
-#  i18n: aag
-#  gh_user:
-#  repo:
-#  img: /static/assets/img/landing/aag.png
-#  pdf: 
-#  desc: Bin Wang, Guofeng Wang, Andrei Sharf, Yangyan Li, Fan Zhong, Xueying Qin, Daniel CohenOr, Baoquan Chen. Active Assembly Guidance with Online Video Parsing. IEEE VR 2018.
+- name: 5G-Media
+  i18n: 5gmedia
+  gh_user:
+  repo:
+  img: /static/assets/img/landing/5g-media.png
+  pdf: http://www.5gmedia.eu
+  desc: The 5G-MEDIA project aims at innovating media-related applications by investigating how these applications and underlying 5G networks should be coupled and interwork to the benefit of both ensuring the applications allocate the resources they need to deliver high quality of experience, and so that the network is not overwhelmed by media traffic.
 
-#- name: EDF_3D_TRACKER
-#  i18n: edft
-#  gh_user:
-#  repo:
-#  img: /static/assets/img/landing/edft.png
-#  pdf: /static/assets/pdf/landing/2017_CGI_a32_wang.pdf
-#  desc: Bin Wang, Fan Zhong, Xueying Qin. Pose Optimization in Edge Distance Field for Textureless 3D Object Tracking. Computer Graphics International 2017.
+- name: Hyper360
+  i18n: h360
+  gh_user:
+  repo:
+  img: /static/assets/img/landing/hyper360.png
+  pdf: http://www.hyper360.eu/
+  desc: Hyper360 is aimed at introducing a complete solution for the capture, production, enhancement, delivery and consumption of an innovative free viewpoint video (FVV) media format to the OTT media sectors. The convergence of omnidirectional (360°) and 3D content will extend current short productions of 360° videos with novel and powerful storytelling opportunities.
 
-#- name: GOS_3D_TRACKER
-#  i18n: gos
-#  gh_user:
-#  repo:
-#  img: /static/assets/img/landing/gos.png
-#  pdf: /static/assets/pdf/landing/2015_TVC_Textureless3DObjectTracking.pdf
-#  desc: Guofeng Wang, Bin Wang, Fan Zhong, Xueying Qin, Baoquan Chen. Global Optimal Searching for Textureless 3D Object Tracking. The Visual Computer, 2015, 31(6-8), p.979-988
+- name: Factory2Fit
+  i18n: f2f
+  gh_user:
+  repo:
+  img: /static/assets/img/landing/factory2fit.png
+  pdf: http://factory2fit.eu/
+  desc: By developing solutions to make the factory environment more flexible and adaptable, the Factory2Fit project will bring increased worker motivation, satisfaction and productivity. It will help current and future workers to become knowledge workers in smart factories with fulfilling careers.
 
-#- name: RGBD_SEGMENTATION
-#  i18n: rgbd_seg
-#  gh_user:
-#  repo:
-#  img: /static/assets/img/landing/rgbd_seg.png
-#  pdf: /static/assets/pdf/landing/2015_JCADCG_RGBDVideoSegmentation.pdf
-#  desc: Wang Bin, Chen Wenzheng, Zhong Fan, Tu Changhe, Qin Xueying, Peng Qunsheng. RGBD Video Segmentation via Geodesic Spatio Temporal Propagation. Journal of Computer Aided Design and Computer Graphics, 2015, 27(10), p.1816-1822 (in Chinese)
+- name: FORENSOR
+  i18n: forensor
+  gh_user:
+  repo:
+  img: /static/assets/img/landing/forensor_original.png
+  pdf: http://forensor-project.eu/
+  desc: FORENSOR aims to develop and validate a novel, ultra-low-power, miniaturised, low-cost, wireless, autonomous sensor (“FORENSOR”) for evidence gathering, able to operate for up to two months without infrastructure. FORENSOR will be manageable remotely, will preserve the availability and the integrity of the evidence collected, and comply with all legal and ethical standards, in particular those related to privacy and personal data protection.
+- name: RePlay
+  i18n: replay
+  gh_user:
+  repo:
+  img: /static/assets/img/landing/replay.png
+  pdf: http://www.fp7-replay.eu/
+  desc: The RePlay project has as its goal the development of a technology platform that shall provide access and interpretation of digital content for Traditional Sports and Games (TSG). It will enable multiple modes of training, coaching and knowledge sharing that will contribute to the increased participation and preservation of traditional sport in the future.
 
+- name: REVERIE
+  i18n: reverie
+  gh_user:
+  repo:
+  img: /static/assets/img/landing/reverie.png
+  pdf: https://cordis.europa.eu/project/rcn/100323_en.html
+  desc: REVERIE is a revolution in online social networking. It is safe, collaborative, online environment which brings together realistic inter-personal communication and interaction. REVERIE will bring online social networking into the real-world with interaction and communication based on what people do and say and how they act.
