--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ author:  # change following line to your infomation.
   skill_icon2:
     - name: fa-code
     - name: fa-terminal
-  desc: I am an engineer working on the verge of computer graphics, computer vision and software engineering. My research interests and working experience are mainly in 3D computer vision and graphics, targeting innovative applications for augmented and virtual reality, including 3D human reconstruction and applied in tele-immersion / holoportation settings. I am also endulging myself into Deep Learning. # Describe yourself.
+  desc: I am an engineer working on the verge of computer graphics, computer vision and software engineering. My research interests and working experience are mainly in 3D computer vision and graphics, targeting innovative applications for augmented and virtual reality, including 3D human reconstruction and applied in tele-immersion / holoportation settings. Seeing the great potential of modern artificial intelligence, i am also indulging myself into machine (deep) learning techniques. # Describe yourself.
 
 # comment
 disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
