--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,29 @@ author:  # change following line to your infomation.
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
     #- name: fa-film
-    - name: icon-3dprint
-    - name: fa-eye
+    #- name: icon-3dprint
+    #- name: fa-eye
+    - icon:
+      name: icon-3dprint
+      color: '#808080'
+      #color: '#34CAAD'
+    - icon:
+      name: fa-eye
+      color: '#808080'
+      #color: '#0D317A'
     #- name: fa-camera
     #- name: icon-csharp
   skill_icon2:
-    - name: fa-code
-    - name: fa-desktop
+    #- name: fa-code
+    #- name: fa-desktop
+    - icon:
+      name: fa-code
+      color: '#808080'
+      #color: '#5637A7'
+    - icon:
+      name: fa-desktop
+      color: '#808080'
+      #color: '#098B92'
     #- name: fa-terminal
     #- name: icon-cplusplus
   desc: I am an engineer working on the verge of computer graphics, computer vision and software engineering. My research interests and working experience are mainly in 3D computer vision and graphics, targeting innovative applications for augmented and virtual reality, including 3D human reconstruction and applied in tele-immersion / holoportation settings. Seeing the great potential of modern artificial intelligence, i am also indulging myself into machine (deep) learning techniques. # Describe yourself.
