--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,8 @@ gio:  # if you wanna this feature, go to https://www.growingio.com/ to get your 
 # Build settings
 encoding: utf-8
 
+google_analytics: UA-147231916-1
+
 # other settings
 highlighter: rouge
 markdown: kramdown
